[tool.poetry]
name = "desafioluestilo"
version = "0.1.0"
description = ""
authors = ["Lucas Soares <soareslukas9090@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
